Added details to run JDK10 on MacOS